src/test/deca/syntax/invalid/sansobjet/lex_motsreserve_valid.deca
//no viable alternative at input 'asm'
//Description: teste si les tokens en sortie sont des mots reserve
//Resultat: il ne faut pas que ce soit des IDENT
asm
extends
if
else
false
true
readint
readFloat
printlnx
printx
protected
while


